Fix Swatch and text alignment issue

--- a/src/app/collection/collection.page.scss
+++ b/src/app/collection/collection.page.scss
@@ -115,6 +115,32 @@ ion-segment {
             height: 67%;
             overflow-y: auto;
             -webkit-overflow-scrolling: auto;
+
+            & > div {
+                display: flex;
+
+                .swatch-image {
+                    flex: 25;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+                .variant-color {
+                    flex: 50;
+                    justify-content: center;
+                    overflow: hidden;
+
+                    span {
+                        display: block;
+                    }
+                }
+                .variant-to-cart {
+                    flex: 20;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+            }
         }
         div.overlay-footer {
             height: 17%;
@@ -144,17 +170,6 @@ ion-segment {
         }
         lazy-img > div.placeholder {
             display: block;
-        }
-        span.swatch-image {
-            width: 25%;
-            text-align: center;
-        }
-        span.variant-color {
-            width: 50%;
-        }
-        span.variant-to-cart {
-            width: 20%;
-            text-align: center;
         }
     }
 
